kubernetes/apps/nginx-lab/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-lab
  namespace: nginx-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-lab
  template:
    metadata:
       annotations:
         sidecar.istio.io/inject: "true"
        labels:
          app: nginx-lab
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: app-data
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: nginx-lab-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab
  namespace: nginx-lab
spec:
  type: NodePort
  selector:
    app: nginx-lab
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
