kubernetes/apps/nginx-lab/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-lab-gateway
  namespace: nginx-lab
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - nginx.lab.local
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: nginx-lab-istio-tls
      hosts:
        - nginx.lab.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-lab
  namespace: nginx-lab
spec:
  hosts:
    - nginx.lab.local
  gateways:
    - nginx-lab-gateway
  http:
    - route:
        - destination:
            host: nginx-lab
            port:
              number: 80
